# mchat

./: .env.example  .gitignore  README.md  init.py  pyproject.toml  run.py
mchat/: __init__.py  helper.py  main.py  model.py  schema.sql
mchat/data/: chat.py  contact.py  group.py  member.py  message.py  message_recipient.py  user.py  user_group.py
mchat/model/: __init__.py  chat.py  contact.py  insert.sql  member.py  message.py  schema.sql  user.py
mchat/router/: auth.py  user.py
mchat/routes/: admin.py  auth.py  chat.py  contact.py  member.py
mchat/service/: admin.py  auth.py  chat.py  contact.py  member.py  message.py  user.py  websockets.py
mchat/static/css/: style.css
mchat/static/js/: api.js  app.js  chat.js  contact.js  db.js  dom.js  handler.js  helper.js  home.js  login.js  main.worker.js  message.js  register.js  socket.js  ui.js  worker.js
mchat/templates/: index.html
mchat/web/: chat.py  member.py  message.py  user.py
