[project]
name = "mchat"
version = "0.1.15"
description = "mchat is a micro chat application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.2.1",
    "fastapi[standard]>=0.115.8",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
    "websockets>=14.2",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
mchat = "mchat.main:main"
